# GameSaveSyncServer

./: .dockerignore  .gitignore  :memory:?cache=shared  Cargo.toml  Dockerfile  README.md  THIRD_PARTY_LICENSES.json  THIRD_PARTY_LICENSES.yaml  askama.toml  build.rs  codebook.toml  diesel.toml  package-lock.json  package.json  tailwind.config.js
.github/workflows/: client.yml  docker-build.yml  rust.yml  server.yml
.zed/: debug.json  settings.json  tasks.json
backend/: .env
backend/migrations/2025-09-20-013725-0000_initial_table/: up.sql
backend/migrations/2025-11-01-214405-0000_DB_uuid/: down.sql
backend/src/: const_var.rs  job_scheduler.rs  openapi.rs  route_dbinfo.rs  route_games.rs  route_paths.rs  route_yaml_import.rs
backend/src/database/: datatype.rs
client/: Cargo.toml
client/src/: add_game_dialog.rs  main.rs
common/: Cargo.toml
common/src/: datatype_endpoint.rs  lib.rs
frontend/: README.md  angular.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/css/: base_style.css
frontend/html/: common_head.html  configuration.html  dashboard.html  index.html  login.html  navbar.html
frontend/src/: app.tsx  authContext.tsx  authProvider.tsx  index.html  login.tsx  main.tsx  protectedRoute.tsx
frontend/src/app/: app.config.server.ts  app.config.ts  app.html  app.routes.ts  app.spec.ts  app.ts
frontend/src/app/auth-guard/: auth-guard.ts
frontend/ts/: configuration.ts  login.ts
migrations/: .gitignore
migrations/2025-09-20-013725-0000_initial_table/: down.sql  up.sql
migrations/2025-09-20-120219-0000_add_known_executable/: down.sql  up.sql
migrations/2025-11-01-214405-0000_DB_uuid/: up.sql
migrations/2025-11-20-224808-0000_db_api_token/: down.sql  up.sql
migrations/2026-01-17-151446-0000_configuration/: down.sql  up.sql
migrations/2026-01-22-004432-0000_additional_ludusavi_properties/: down.sql  up.sql
server/: Cargo.toml
server/migrations/2025-09-20-013725-0000_initial_table/: down.sql  up.sql
server/src/: ludusavi.rs  main.rs  route_executable.rs  route_games.rs  route_paths.rs  route_saves.rs  route_yaml_import.rs
server/src/database/: datatype.rs  interface.rs  mod.rs
src/: auth.rs  configuration.rs  const_var.rs  datatype_endpoint.rs  file_system.rs  job_demo.rs  job_ludusavi.rs  job_scheduler.rs  ludusavi.rs  ludusavi_datatype.rs  main.rs  openapi.rs  route_configuration.rs  route_dbinfo.rs  route_executable.rs  route_executables.rs  route_games.rs  route_health.rs  route_paths.rs  route_registry_paths.rs  route_saves.rs  route_uuid.rs  route_web_configuration.rs  route_web_dashboard.rs  route_web_login.rs  route_yaml_import.rs
src/database/: database.rs  database_interface.rs  datatype.rs  datatype_database.rs  datatype_database_schema.rs  interface.rs  mod.rs  schema.rs
static/css/: login.css
static/js/: login.js
templates/: common_head.html  index.html  login.html
(+5 files in other folders)
