[package]
name = "GameSaveServer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.225", features = ["derive"] }
tracing-subscriber = "0.3.20"
diesel = { version = "2.3.2", features = ["sqlite", "serde_json", "r2d2", "time"] }
diesel_migrations = "2.3.0"
once_cell = "1.21.3"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
time = { version = "0.3.44", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4"] }

