[package]
name = "GameSaveServer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
const_format = "0.2.34"
diesel = { version = "2.3.2", features = ["sqlite", "serde_json", "r2d2", "time"] }
diesel_migrations = "2.3.0"
mime_guess = "2.0"
once_cell = "1.21.3"
serde = { version = "1.0.225", features = ["derive"] }
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7" , features = ["io"] }
tracing-subscriber = "0.3.20"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.18.1", features = ["v4"] }
