[package]
name = "GameSaveServer"
version = "0.3.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["multipart", "macros"] }
chrono = "0.4.42"
const_format = "0.2.35"
diesel = { version = "2.3.4", features = ["sqlite", "serde_json", "r2d2", "time"] }
diesel_migrations = "2.3.1"
itertools = "0.14.0"
mime_guess = "2.0"
once_cell = "1.21.3"
reqwest = "0.12.26"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
time = "0.3.44"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7" , features = ["io"] }
tower-http = { version = "0.6.8", features = ["auth", "validate-request", "fs", "trace"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt", "std"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
uuid = { version = "1.19.0", features = ["v4"] }
