[package]
name = "common"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1.0.225", features = ["derive"] }
utoipa = { version = "5.4.0", features = ["axum_extras"], optional = true }
diesel = { version = "2.3.2", features = ["sqlite", "serde_json", "r2d2", "time"], optional = true }

[features]
utoipa-extras = ["dep:utoipa"]
diesel-extras = ["dep:diesel"]
